fix: corregir carpeta Frontend en CI Frontend

--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -21,10 +21,11 @@ jobs:
 
       - name: Instalar dependencias del frontend
         run: |
-          cd frontend
+          cd Frontend
           npm install
 
       - name: Ejecutar pruebas del frontend
         run: |
-          cd frontend
+          cd Frontend
           npm test -- --run
+
