--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -21,10 +21,10 @@ jobs:
 
       - name: Instalar dependencias del backend
         run: |
-          cd backend
+          cd Backend
           npm install
 
       - name: Ejecutar pruebas del backend
         run: |
-          cd backend
+          cd Backend
           npm test
